# maruzzella

./: Cargo.toml  LICENSE  README.md
docs/: appearance-api.md  implementation-roadmap.md  plugin-abi-rfc.md  plugin-author-workflow.md
examples/: default_theme.rs  notebook.rs  plugin_view.rs  semantic_appearance.rs
maruzzella_api/: Cargo.toml
maruzzella_api/src/: lib.rs
maruzzella_sdk/: Cargo.toml
maruzzella_sdk/src/: lib.rs
plugins/example_plugin/: Cargo.toml
plugins/example_plugin/src/: lib.rs
resources/: style.css
src/: app.rs  base_plugin.rs  commands.rs  layout.rs  lib.rs  main.rs  plugin_tabs.rs  plugins.rs  product.rs  spec.rs  studio.rs  theme.rs
src/shell/: mod.rs  tabbed_panel.rs  topbar.rs  workbench_custom.rs
