[workspace]
members = ["maruzzella_api", "maruzzella_sdk", "plugins/example_plugin"]

[package]
name = "maruzzella"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
glib = "0.20"
libloading = "0.8"
maruzzella_api = { path = "maruzzella_api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
