[workspace]
members = ["maruzzella_api", "maruzzella_sdk", "plugins/example_plugin"]

[package]
name = "maruzzella"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "GTK4 desktop shell prototype in Rust with persisted layouts and plugin-backed views."
readme = "README.md"
repository = "https://github.com/lelloman/maruzzella"
homepage = "https://github.com/lelloman/maruzzella"
documentation = "https://docs.rs/maruzzella"
keywords = ["gtk4", "desktop", "shell", "plugin", "workspace"]
categories = ["gui"]

[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
glib = "0.20"
libloading = "0.8"
maruzzella_api = { version = "0.1.1", path = "maruzzella_api" }
maruzzella_sdk = { version = "0.1.1", path = "maruzzella_sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
