[package]
name = "maruzzella_api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared ABI and data contracts for Maruzzella plugins and hosts."
repository = "https://github.com/lelloman/maruzzella"
homepage = "https://github.com/lelloman/maruzzella"
documentation = "https://docs.rs/maruzzella_api"
keywords = ["plugin", "abi", "gtk4", "desktop"]
categories = ["api-bindings"]

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
