[package]
name = "maruzzella_sdk"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK for building Maruzzella plugins."
repository = "https://github.com/lelloman/maruzzella"
homepage = "https://github.com/lelloman/maruzzella"
documentation = "https://docs.rs/maruzzella_sdk"
keywords = ["plugin", "sdk", "gtk4", "desktop"]
categories = ["api-bindings"]

[lib]
path = "src/lib.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
maruzzella_api = { version = "0.1.0", path = "../maruzzella_api" }
serde = "1"
serde_json = "1"
