[package]
name = "example_plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
maruzzella_sdk = { path = "../../maruzzella_sdk" }
gtk = { package = "gtk4", version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
